--- a/index.html
+++ b/index.html
@@ -5,9 +5,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul class="nav-list">
+                <li class="nav-tab"><a href="#">Posts</a></li>
+                <li class="nav-tab"><a href="#">To-Do</a></li>
+            </ul>
+        </nav>
+    </header>
+<main class="main-container">
+        <aside class="aside-container">
+            <section class="aside-user">
+                <img src="assets/images/profile-image/profile_pic.jpg" alt="Logo">
+                <h2>Username</h2>
+            </section>
+            <section class="aside-user">
+                <img src="assets/images/profile-image/profile_pic.jpg" alt="Logo">
+                <h2>Username</h2>
+            </section>
+            <section class="aside-user">
+                <img src="assets/images/profile-image/profile_pic.jpg" alt="Logo">
+                <h2>Username</h2>
+            </section>
+            <section class="aside-user">
+                <img src="assets/images/profile-image/profile_pic.jpg" alt="Logo">
+                <h2>Username</h2>
+            </section>
+            <section class="aside-user">
+                <img src="assets/images/profile-image/profile_pic.jpg" alt="Logo">
+                <h2>Username</h2>
+            </section>
+            <section class="aside-user">
+                <img src="assets/images/profile-image/profile_pic.jpg" alt="Logo">
+                <h2>Username</h2>
+            </section>
+            <section class="aside-user">
+                <img src="assets/images/profile-image/profile_pic.jpg" alt="Logo">
+                <h2>Username</h2>
+            </section>
+        </aside>
+<section class="home-page">
+        <div>
+            <h1>Social Community</h1>
+            <p>This is where the main content will go.</p>
+        </div>
+        </section>
+</main>
 
 </body>
 
