Homepage ish fixed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SLL</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -48,10 +48,15 @@
                 <h2>Username</h2>
             </section>
         </aside>
-<section class="home-page">
-        <div>
-            <h1>Social Community</h1>
-            <p>This is where the main content will go.</p>
+<section class="interactive-content-container">
+        <div class="home-page-container">
+            <div class="home-card">
+                <div>
+                    <img src="assets/images/image.png" alt="Logo">
+                </div>
+                <h1>Social Looping Legends</h1>
+                <p>This is where the main content will go.</p>
+            </div>
         </div>
         </section>
 </main>
