--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </ul>
         </nav>
     </header>
-<main class="main-container">
+    <main class="main-container">
         <aside class="aside-container">
             <section class="aside-user">
                 <img src="assets/images/profile-image/profile_pic.jpg" alt="Logo">
@@ -48,14 +48,27 @@
                 <h2>Username</h2>
             </section>
         </aside>
-<section class="home-page">
-        <div>
-            <h1>Social Community</h1>
-            <p>This is where the main content will go.</p>
-        </div>
+        <section class="home-page">
+            <div>
+                <h1>Social Community</h1>
+                <p>This is where the main content will go.</p>
+            </div>
+            <div class="main-content-cards">
+                <div class="user-card"></div>
+                <div class="user-card"></div>
+                <div class="user-card"></div>
+                <div class="user-card"></div>
+                <div class="user-card"></div>
+                <div class="user-card"></div>
+                <div class="user-card"></div>
+                <div class="user-card"></div>
+                <div class="user-card"></div>
+                <div class="user-card"></div>
+                <div class="user-card"></div>
+                <div class="user-card"></div>
+            </div>
         </section>
-</main>
-
+    </main>
 </body>
 
 </html>
