Add code to fetch all users and show username in aside

--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SLL</title>
+    
     <link rel="stylesheet" href="css/styles.css">
+
+    <script src="./js/get-all-users.js" defer></script>
+
+    <title>SLL</title>
 </head>
 
 <body>
+
     <header>
         <nav>
             <ul class="nav-list">
@@ -17,8 +22,11 @@
             </ul>
         </nav>
     </header>
+
 <main class="main-container">
+
         <aside class="aside-container">
+            <!-- If the section elements inside html aside delete we won't need to clean this with JS code -->
             <section class="aside-user">
                 <img src="assets/images/profile-image/profile_pic.jpg" alt="Logo">
                 <h2>Username</h2>
@@ -48,16 +56,17 @@
                 <h2>Username</h2>
             </section>
         </aside>
-<section class="interactive-content-container">
-        <div class="home-page-container">
-            <div class="home-card">
-                <div>
-                    <img src="assets/images/image.png" alt="Logo">
+
+        <section class="interactive-content-container">
+            <div class="home-page-container">
+                <div class="home-card">
+                    <div>
+                        <img src="assets/images/image.png" alt="Logo">
+                    </div>
+                    <h1>Social Looping Legends</h1>
+                    <p>This is where the main content will go.</p>
                 </div>
-                <h1>Social Looping Legends</h1>
-                <p>This is where the main content will go.</p>
             </div>
-        </div>
         </section>
 </main>
 
