main content cards

--- a/index.html
+++ b/index.html
@@ -54,18 +54,7 @@
                 <p>This is where the main content will go.</p>
             </div>
             <div class="main-content-cards">
-                <div class="user-card"></div>
-                <div class="user-card"></div>
-                <div class="user-card"></div>
-                <div class="user-card"></div>
-                <div class="user-card"></div>
-                <div class="user-card"></div>
-                <div class="user-card"></div>
-                <div class="user-card"></div>
-                <div class="user-card"></div>
-                <div class="user-card"></div>
-                <div class="user-card"></div>
-                <div class="user-card"></div>
+                <div class="user-cards"></div>
             </div>
         </section>
     </main>
