--- a/index.html
+++ b/index.html
@@ -1,75 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css" />
 
     <script src="./js/get-all-users.js" defer></script>
+    <script src="./js/show-to-do.js" defer></script>
 
     <title>SLL</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <header>
-        <nav>
-            <ul class="nav-list">
-                <li class="nav-tab"><a href="#">Posts</a></li>
-                <li class="nav-tab"><a href="#">To-Do</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <ul class="nav-list">
+          <li class="nav-tab"><a href="#" id="home-link">Homepage</a></li>
+          <li class="nav-tab"><a href="#" id="post.link">Posts</a></li>
+          <li class="nav-tab"><a href="#" id="todo-link">To-Do</a></li>
+        </ul>
+      </nav>
     </header>
 
-<main class="main-container">
-
-        <aside class="aside-container">
-            <!-- If the section elements inside html aside delete we won't need to clean this with JS code -->
-            <section class="aside-user">
-                <img src="assets/images/profile-image/profile_pic.jpg" alt="Logo">
-                <h2>Username</h2>
-            </section>
-            <section class="aside-user">
-                <img src="assets/images/profile-image/profile_pic.jpg" alt="Logo">
-                <h2>Username</h2>
-            </section>
-            <section class="aside-user">
-                <img src="assets/images/profile-image/profile_pic.jpg" alt="Logo">
-                <h2>Username</h2>
-            </section>
-            <section class="aside-user">
-                <img src="assets/images/profile-image/profile_pic.jpg" alt="Logo">
-                <h2>Username</h2>
-            </section>
-            <section class="aside-user">
-                <img src="assets/images/profile-image/profile_pic.jpg" alt="Logo">
-                <h2>Username</h2>
-            </section>
-            <section class="aside-user">
-                <img src="assets/images/profile-image/profile_pic.jpg" alt="Logo">
-                <h2>Username</h2>
-            </section>
-            <section class="aside-user">
-                <img src="assets/images/profile-image/profile_pic.jpg" alt="Logo">
-                <h2>Username</h2>
-            </section>
-        </aside>
-
-        <section class="interactive-content-container">
-            <div class="home-page-container">
-                <div class="home-card">
-                    <div>
-                        <img src="assets/images/image.png" alt="Logo">
-                    </div>
-                    <h1>Social Looping Legends</h1>
-                    <p>This is where the main content will go.</p>
-                </div>
-            </div>
+    <main class="main-container">
+      <aside class="aside-container">
+        <!-- If the section elements inside html aside delete we won't need to clean this with JS code -->
+        <section class="aside-user">
+          <img
+            src="assets/images/profile-image/profile_pic.jpg"
+            data-user-id="1"
+            alt="Logo"
+          />
+          <h2>Username</h2>
         </section>
-</main>
+        <section class="aside-user">
+          <img
+            src="assets/images/profile-image/profile_pic.jpg"
+            data-user-id="2"
+            alt="Logo"
+          />
+          <h2>Username</h2>
+        </section>
+        <section class="aside-user">
+          <img
+            src="assets/images/profile-image/profile_pic.jpg"
+            data-user-id="3"
+            alt="Logo"
+          />
+          <h2>Username</h2>
+        </section>
+        <section class="aside-user">
+          <img
+            src="assets/images/profile-image/profile_pic.jpg"
+            data-user-id="4"
+            alt="Logo"
+          />
+          <h2>Username</h2>
+        </section>
+        <section class="aside-user">
+          <img
+            src="assets/images/profile-image/profile_pic.jpg"
+            data-user-id="5"
+            alt="Logo"
+          />
+          <h2>Username</h2>
+        </section>
+        <section class="aside-user">
+          <img
+            src="assets/images/profile-image/profile_pic.jpg"
+            data-user-id="6"
+            alt="Logo"
+          />
+          <h2>Username</h2>
+        </section>
+        <section class="aside-user">
+          <img
+            src="assets/images/profile-image/profile_pic.jpg"
+            data-user-id="7"
+            alt="Logo"
+          />
+          <h2>Username</h2>
+        </section>
+      </aside>
 
-</body>
-
+      <section class="interactive-content-container">
+        <div class="home-page-container">
+          <div class="home-card">
+            <div>
+              <img src="assets/images/image.png" alt="Logo" />
+            </div>
+            <h1>Social Looping Legends</h1>
+            <p>This is where the main content will go.</p>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
