--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     
     <link rel="stylesheet" href="css/styles.css">
 
-    <script src="./js/get-all-users.js" defer></script>
+    <script type="module" src="./js/get-all-users.js" defer></script>
+    <script type="module" src="./js/userSession.js"></script>
 
     <title>SLL</title>
 </head>
