clean aside-user html structure

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="./js/show-to-do.js" defer></script>
     <script type="module" src="./js/get-all-users.js" defer></script>
     <script type="module" src="./js/userSession.js"></script>
+    <script type="module" src="./js/get-user-posts.js"></script>
 
     <title>SLL</title>
   </head>
@@ -26,7 +27,8 @@
     </header>
     <main class="main-container">
       <aside class="aside-container">
-        <!-- If the section elements inside html aside delete we won't need to clean this with JS code -->
+        
+        <!-- User-aside created dinamiclly with this structure:
         <section class="aside-user">
           <img
             src="assets/images/profile-image/profile_pic.jpg"
@@ -34,56 +36,9 @@
             alt="Logo"
           />
           <h2>Username</h2>
-        </section>
-        <section class="aside-user">
-          <img
-            src="assets/images/profile-image/profile_pic.jpg"
-            data-user-id="2"
-            alt="Logo"
-          />
-          <h2>Username</h2>
-        </section>
-        <section class="aside-user">
-          <img
-            src="assets/images/profile-image/profile_pic.jpg"
-            data-user-id="3"
-            alt="Logo"
-          />
-          <h2>Username</h2>
-        </section>
-        <section class="aside-user">
-          <img
-            src="assets/images/profile-image/profile_pic.jpg"
-            data-user-id="4"
-            alt="Logo"
-          />
-          <h2>Username</h2>
-        </section>
-        <section class="aside-user">
-          <img
-            src="assets/images/profile-image/profile_pic.jpg"
-            data-user-id="5"
-            alt="Logo"
-          />
-          <h2>Username</h2>
-        </section>
-        <section class="aside-user">
-          <img
-            src="assets/images/profile-image/profile_pic.jpg"
-            data-user-id="6"
-            alt="Logo"
-          />
-          <h2>Username</h2>
-        </section>
-        <section class="aside-user">
-          <img
-            src="assets/images/profile-image/profile_pic.jpg"
-            data-user-id="7"
-            alt="Logo"
-          />
-          <h2>Username</h2>
-        </section>
+        </section> -->
       </aside>
+
         <section class="interactive-content-container">
             <div class="home-page-container">
                 <div class="home-card">
