Link to js code + Fix class

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <link rel="stylesheet" href="css/styles.css">
 
     <script src="./js/get-all-users.js" defer></script>
-
+    <script src="./js/home-cards.js" defer></script>
     <title>SLL</title>
 </head>
 
@@ -22,7 +22,7 @@
             </ul>
         </nav>
     </header>
-<main class="main-container">
+    <main class="main-container">
         <aside class="aside-container">
             <!-- If the section elements inside html aside delete we won't need to clean this with JS code -->
             <section class="aside-user">
@@ -54,7 +54,7 @@
                 <h2>Username</h2>
             </section>
         </aside>
-          
+
 
         <section class="interactive-content-container">
             <div class="home-page-container">
@@ -65,11 +65,10 @@
                     <h1>Social Looping Legends</h1>
                     <p>This is where the main content will go.</p>
                 </div>
-               <div class="main-content-cards">
-                <div class="user-cards">
-                 <!-- User cards will be dynamically inserted here -->
-                 </div>
-              </div>
+                <div class="main-content-cards">
+                    <!-- User cards will be dynamically inserted here -->
+                </div>
+            </div>
             </div>
         </section>
     </main>
