--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script type="module" src="./js/get-user-posts.js" defer></script>
   <script type="module" src="./js/get-post-comments.js" defer></script>
   <script type="module" src="./js/home-cards.js" defer></script>
+  <script src="./js/mobile-menu.js" defer></script>
 
   <title>SLL</title>
 </head>
@@ -32,6 +33,16 @@
   </header>
 
   <main class="main-container">
+    <!-- Hamburger menu button for mobile -->
+    <button id="hamburger-btn" class="hamburger-btn" aria-label="Toggle menu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+    
+    <!-- Overlay for mobile menu -->
+    <div id="menu-overlay" class="menu-overlay"></div>
+    
     <aside class="aside-container">
       <!-- User-aside created dinamiclly with this structure:
         <section class="aside-user">
@@ -43,7 +54,6 @@
           <h2>Username</h2>
         </section> -->
     </aside>
-
 
     <section class="interactive-content-container">
         <!-- Content will be loaded dynamically by JavaScript -->
