User info details top

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="./js/show-to-do.js" defer></script>
   <script type="module" src="./js/get-all-users.js" defer></script>
   <script type="module" src="./js/userSession.js" defer></script>
+  <script src="./js/user-header-creator.js" defer></script>
   <script type="module" src="./js/get-user-posts.js" defer></script>
   <script type="module" src="./js/get-post-comments.js" defer></script>
   <script type="module" src="./js/home-cards.js" defer></script>
@@ -44,15 +45,6 @@
     <div id="menu-overlay" class="menu-overlay"></div>
     
     <aside class="aside-container">
-      <!-- User-aside created dinamiclly with this structure:
-        <section class="aside-user">
-          <img
-            src="assets/images/profile-image/profile_pic.jpg"
-            data-user-id="1"
-            alt="Logo"
-          />
-          <h2>Username</h2>
-        </section> -->
     </aside>
 
     <section class="interactive-content-container">
